:sparkles: :bug: fixed map size on smaller laptop screens & created the roll_die page

--- a/product/zarlasht_(final_game)/screen_designs/priv/static/map.css
+++ b/product/zarlasht_(final_game)/screen_designs/priv/static/map.css
@@ -13,3 +13,9 @@
 #map > div:nth-of-type(1210) {
   border-bottom-right-radius: 10px;
 }
+
+@media(min-width: 1220px){
+  #map{
+    zoom: 87%;
+  }
+}
